Unreleased

Added
    Store enviorment variable with cloud-config rev (#70)
    Backup & Restore Containers (#89)
    Browse, upload & delete container files (#132)

Changed
    Show memory as graph instead of as table 

0.5.0

Fixed
    Container snapshot breaks loading deployments
    Providing a port breaks adding host (#113)

Changed
    UI tweaks including
        sidebar width
        Collapse server by default when there is > 10 containers (#114)
        Reload hosts + container tree on alias change
        Show cpu cores on the dashboard
    Sort containers in alphabetical order (#115)

Added
    Let user choose shell when opening container console session (#116)
    Right click context menu for containers (#118)
    A server overview page (#121)
    Bulk delete containers (ground works there for more actions) on server
    Phone home tracking for containers in a deployment
    A page to manage instance settings
    Upgrading guide (#124)
    Cluster support (#6) including:
        Auto discover other hosts from cluster members
        Cluster member roles
        Cluster memory usage
        Multiple clusters suport
    Recored actions (#127)

0.4.0

Added
    Allow setting container settings when creating them (#57)
    Copy profiles between hosts (#94)
    Choose host to restore container snapshot to (#96)
    Delete host (#99)
    Reload server dashboard after finishing creating a container (#97)

Changed
    Redirect by default to https (#86)
    Spelling of "Stoping" (#95)
    Use $.confirm instead of modal for copying container
    Use more consistent card theming & add a light gray background
    Bump composer libaries to fix (#101)
    Only reload container tree instead of dashboard in certian instances (#109, #105)
    Stop host online / offline from appearing over and over (#110)

Fixed
    Breadcrumb navigation (#103)

0.3.0

Fixed
    Fix ui doesn't load when server is offline (#77)